--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.theoplayer.theoplayerexample">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.theo_androidtv">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-feature android:name="android.software.leanback"
@@ -14,12 +14,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/THEO.Base"
         android:banner="@drawable/banner">
-        <activity android:name=".MainActivity"
-            android:screenOrientation="userPortrait"
+        <activity android:name=".PlayerActivity"
+            android:screenOrientation="userLandscape"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/Theme.Leanback"
+            android:theme="@style/THEO.Base"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,6 +27,7 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
